force-app/main/default/objects/WelcomeCall_Leave__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for filter count roll up summary, since filter can not use formula field.

This value get from Active_Leave__c.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>