force-app/main/default/objects/WelcomeCall_Leave__c/fields/Active_Leave__c.field-meta.xml
<CustomField>
    <fullName>Active_Leave__c</fullName>
    <formula>AND(  TODAY() &gt;= WelcomeCall_Start_Date__c ,TODAY() &lt;=  WelcomeCall_End_Date__c )</formula>
    <label>Active Formula</label>
    <type>Checkbox</type>
</CustomField>