force-app/main/default/objects/WelcomeCall_Leave__c/fields/WelcomeCall_Agent__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Agent__c</fullName>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Agent_Group__c.WelcomeCall_Resign__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Agent_Group__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agent_Group__c</referenceTo>
    <relationshipLabel>Leave</relationshipLabel>
    <relationshipName>Leave</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>