force-app/main/default/objects/WelcomeCall_Leave__c/fields/WelcomeCall_Description__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>