force-app/main/default/objects/WelcomeCall_Leave__c/fields/WelcomeCall_End_Date__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>