force-app/main/default/objects/WelcomeCall_Leave__c/fields/WelcomeCall_Reason__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>