force-app/main/default/objects/WelcomeCall_Leave__c/fields/WelcomeCall_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>